--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
